Bug where Apple shows text as blue and is hard to read

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ button{
     height: 100px;
     /* width: 1000px; */
     width: 70%;
+    color: black;
 }
 
 button:hover{
